# server-client

./: CMakeLists.txt  Makefile  README.md  client.cpp  client1.cpp  client_1.cpp  client_1_test.cpp  client_2.cpp  client_2.ilk  dop_function.h  eventloop.cpp  eventloop.h  exceptionhandler.cpp  exceptionhandler.h  game_creator.cpp  game_creator.h  game_server.cpp  game_server.h  icommand.cpp  icommand.h  imoving.h  ioc.h  irotatable.h  istate.cpp  istate.h  middleware.cpp  middleware.ilk  minor.cpp  minor.h  movecommand.cpp  object.cpp  object.h  objposition.cpp  objposition.h  order.cpp  order.h  safequeue.h  scope.cpp  scope.h  server.cpp  (+9 more)
.github/workflows/: release.yml
client_1/: client_1.ilk
